--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -46,22 +46,22 @@ jobs:
     steps:
       - name: checkout source code
         uses: actions/checkout@v1
-      - name: deploy get-package
-        uses: appleboy/lambda-action@master
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: get-package
-          source: src/lambda_functions/get_package.py
-      # - name: deploy get-packages
+      # - name: deploy get-package
       #   uses: appleboy/lambda-action@master
       #   with:
       #     aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       #     aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     aws_region: ${{ secrets.AWS_REGION }}
-      #     function_name: get-packages
-      #     source: src/lambda_functions/get_packages.py
+      #     function_name: get-package
+      #     source: src/lambda_functions/get_package.py
+      - name: deploy get-packages
+        uses: appleboy/lambda-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ${{ secrets.AWS_REGION }}
+          function_name: get-packages
+          source: src/lambda_functions/get_packages.py
       - name: deploy get-package-by-name
         uses: appleboy/lambda-action@master
         with:
