finished linter stuff

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') --disable=C --disable=R --disable=W0613
+        pylint $(git ls-files '*.py') --disable=C --disable=R --disable=W0613 --disable=W0612 --disable=W0104
   test-repo:
     runs-on: ubuntu-latest
     steps:
@@ -36,4 +36,5 @@ jobs:
       - run: make test
 
 # W0613 -> Unused argument 'context'
+# W0612 -> Unused variable
 # W0104 -> Statement seems to have no effect
