--- a/src/app/web_interface/pubspec.yaml
+++ b/src/app/web_interface/pubspec.yaml
@@ -32,11 +32,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
   # Windows 11 Style UI
   fluent_ui: ^4.4.1
 
@@ -46,7 +41,7 @@ dependencies:
   firebase_auth: ^4.3.0
   # Firestore from Firebase
   cloud_firestore: ^4.4.5
-  # Use get() for api call
+  # Use for api calls
   http: ^0.13.5
 
   
