--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -126,3 +126,11 @@ jobs:
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: rate-package
           source: src/lambda_functions/rate_package.py
+      - name: deploy rate-package
+        uses: appleboy/lambda-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ${{ secrets.AWS_REGION }}
+          function_name: authenticate
+          source: src/lambda_functions/authenticate.py
